  13 Feb 2013; Hendrik v. Raven (lorem_ipsum) <hendrik@consetetur.de>
  transmission-remote-cli-1.4.7.ebuild:
  transmission-remote-cli: changed distfile name

*transmission-remote-cli-1.4.7 (13 Feb 2013)

  13 Feb 2013; Hendrik v. Raven (lorem_ipsum) <hendrik@consetetur.de>
  +metadata.xml, +transmission-remote-cli-1.4.7.ebuild:
  new ebuild for the transmission-remote-cli