@@ -4,12 +4,12 @@
 
 EAPI=5
 
-PYTHON_COMPAT=( python2_7 )
+PYTHON_COMPAT=( python{2_5,2_6,2_7} )
 PYTHON_REQ_USE="ncurses"
 inherit bash-completion-r1 python-r1
 
-DESCRIPTION="A ncurses interface for the Transmission BitTorrent client"
-HOMEPAGE="https://github.com/fagga/transmission-remote-cli/tree/v1.4.7"
+DESCRIPTION="Ncurses interface for the Transmission BitTorrent client"
+HOMEPAGE="https://github.com/fagga/transmission-remote-cli/"
 SRC_URI="https://github.com/fagga/${PN}/archive/v${PV}.tar.gz -> ${P}.tar.gz"
 
 LICENSE="GPL-3"
@@ -17,8 +17,8 @@ SLOT="0"
 KEYWORDS="~amd64"
 IUSE="geoip rdns"
 
-# TODO: dev-python/simplejson if python <= 2.5
 RDEPEND="${PYTHON_DEPS}
+	python_targets_python2_5? ( dev-python/simplejson )
 	geoip? ( dev-python/geoip-python )
 	rdns? ( dev-python/adns-python )"
 
@@ -26,5 +26,6 @@ src_install() {
 	python_foreach_impl python_doscript transmission-remote-cli
 	doman transmission-remote-cli.1
 	dodoc NEWS README.md
-	newbashcomp ${PN}-bash-completion.sh ${PN}
+	newbashcomp transmission-remote-cli-bash-completion.sh \
+		transmission-remote-cli
 }
